--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,118 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+  <script src="https://kit.fontawesome.com/65fb8095e7.js" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="./css/output.css">  
   <title>Comfort Hluyo</title>
 
 </head>
-<body class="bg-light-blue">
-  Feel free to remove these styles or customise in your own stylesheet 👍  
+<body>
+  <header class="
+  	px-4 py-6
+  	bg-dark-blue shadow
+ 	">
+	 	<nav class="
+	 		w-full
+	 		flex justify-end
+	 	">
+	 		<ul class="flex items-center gap-8 max-md:hidden">
+	 			<li class="text-light-blue text-sm">
+	 				<a href="#">
+	 					About
+	 				</a>
+	 			</li>
+	 			<li class="text-light-gray text-sm">
+	 				<a href="#">
+	 					Experience
+	 				</a>
+	 			</li>
+	 			<li class="text-light-gray text-sm">
+	 				<a href="#">
+	 					Projects
+	 				</a>
+	 			</li>
+	 			<li class="text-light-gray text-sm">
+	 				<a href="#">
+	 					Contact
+	 				</a>
+	 			</li>
+	 			<li>
+	 				<a 
+	 					href="#"
+	 					class="
+	 						border border-light-blue text-light-blue px-3 py-1 rounded
+	 					"
+	 				>
+	 					CV
+	 				</a>
+	 			</li>
+	 		</ul>
+
+	 		<button id="harmburger-btn" class="md:hidden">
+	 			<i class="fa-solid fa-bars text-2xl text-light-gray"></i>
+	 		</button>
+	 	</nav> 	
+  </header> 
+  <main>
+  	
+  </main>
+
+  <!-- Responsive Navigation -->
+  <div id="responsive-nav-wrapper" data-status="" class="active:block fixed top-0 w-full h-screen bg-dark-blue hidden">
+  	<div class="flex justify-end px-4 py-4">
+  		<button id="close-btn" class="text-light-gray">
+  			<i class="fa-solid fa-x text-xl text-light-gray"></i>
+  		</button>
+  	</div>
+  	<ul class="flex flex-col items-center gap-8">
+ 			<li class="text-light-blue text-sm">
+ 				<a href="#">
+ 					About
+ 				</a>
+ 			</li>
+ 			<li class="text-light-gray text-sm">
+ 				<a href="#">
+ 					Experience
+ 				</a>
+ 			</li>
+ 			<li class="text-light-gray text-sm">
+ 				<a href="#">
+ 					Projects
+ 				</a>
+ 			</li>
+ 			<li class="text-light-gray text-sm">
+ 				<a href="#">
+ 					Contact
+ 				</a>
+ 			</li>
+ 			<li>
+ 				<a 
+ 					href="#"
+ 					class="
+ 						border border-light-blue text-light-blue px-3 py-1 rounded
+ 					"
+ 				>
+ 					CV
+ 				</a>
+ 			</li>
+ 		</ul>
+  </div>
 </body>
+
+<script>
+	const harmburgerBtn = document.querySelector('#harmburger-btn')
+	const closeBtn = document.querySelector('#close-btn')
+	const responsiveNavWrapper = document.querySelector('#responsive-nav-wrapper')
+
+	harmburgerBtn.addEventListener('click', () => {
+		if(responsiveNavWrapper.getAttribute('data-status') !== 'active')
+			responsiveNavWrapper.setAttribute('data-status', 'active')
+	})
+
+	closeBtn.addEventListener('click', () => {
+		if(responsiveNavWrapper.getAttribute('data-status') === 'active')
+			responsiveNavWrapper.setAttribute('data-status', '')
+	})
+</script>
 </html>
