Created the portfolio's four main pages

--- a/src/about.html
+++ b/src/about.html
@@ -25,22 +25,22 @@
 	 	">
 	 		<ul class="flex items-center gap-8 max-md:hidden">
 	 			<li class="text-light-blue text-sm">
-	 				<a href="#">
+	 				<a href="about.html">
 	 					About
 	 				</a>
 	 			</li>
 	 			<li class="text-light-gray text-sm">
-	 				<a href="#">
+	 				<a href="experience.html">
 	 					Experience
 	 				</a>
 	 			</li>
 	 			<li class="text-light-gray text-sm">
-	 				<a href="#">
+	 				<a href="projects.html">
 	 					Projects
 	 				</a>
 	 			</li>
 	 			<li class="text-light-gray text-sm">
-	 				<a href="#">
+	 				<a href="contact.html">
 	 					Contact
 	 				</a>
 	 			</li>
@@ -74,22 +74,22 @@
   	</div>
   	<ul class="flex flex-col items-center gap-8">
  			<li class="text-light-blue text-sm">
- 				<a href="#">
+ 				<a href="about.html">
  					About
  				</a>
  			</li>
  			<li class="text-light-gray text-sm">
- 				<a href="#">
+ 				<a href="experience.html">
  					Experience
  				</a>
  			</li>
  			<li class="text-light-gray text-sm">
- 				<a href="#">
+ 				<a href="projects.html">
  					Projects
  				</a>
  			</li>
  			<li class="text-light-gray text-sm">
- 				<a href="#">
+ 				<a href="contact.html">
  					Contact
  				</a>
  			</li>
