--- a/src/about.html
+++ b/src/about.html
@@ -61,8 +61,36 @@
 	 		</button>
 	 	</nav> 	
   </header> 
-  <main>
-  	
+  <main class="bg-dark-blue min-h-screen">
+  	<section class="flex flex-col-reverse max-md:items-center md:flex-row md:justify-between gap-4 px-4 sm:px-16 md:px-28 lg:px-36">
+  		<div class="md:w-1/2">
+  			<h1 class="text-3xl mb-4 max-md:text-center font-semibold text-cream">
+  				About Me
+  			</h1>
+
+  			<p class="text-light-gray text-sm mb-2">
+  				Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
+  			</p>
+
+  			<p class="text-light-gray text-sm mb-2">
+  				Fast-forward to today, and I've had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio. My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.
+  			</p>
+
+  			<p class="text-light-gray text-sm mb-2">
+  				Here are a few technologies I've been working with recently:
+  			</p>
+
+  			<div class="text-light-gray text-sm mb-2">
+  				<ul>
+  					<li>JavaScript (ES6+)</li>
+  					<li>React</li>
+  				</ul>
+  			</div>
+  		</div>
+  		<div class="md:w-1/2 relative flex justify-center">
+  			<img class="w-full sm:w-96 h-auto" src="../images/ProfilePic.jpg">
+  		</div>
+  	</section>
   </main>
 
   <!-- Responsive Navigation -->
