Completed styling the text on the about page

--- a/src/about.html
+++ b/src/about.html
@@ -62,33 +62,69 @@
 	 	</nav> 	
   </header> 
   <main class="bg-dark-blue min-h-screen">
-  	<section class="flex flex-col-reverse max-md:items-center md:flex-row md:justify-between gap-4 px-4 sm:px-16 md:px-28 lg:px-36">
-  		<div class="md:w-1/2">
+  	<section class="flex flex-col-reverse max-md:items-center md:flex-row md:justify-between gap-2 px-4 sm:px-16 md:px-28 lg:px-36">
+  		<div class="max-md:mt-4 md:w-1/2">
   			<h1 class="text-3xl mb-4 max-md:text-center font-semibold text-cream">
   				About Me
   			</h1>
 
-  			<p class="text-light-gray text-sm mb-2">
-  				Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
+  			<p class="text-light-gray text-sm mb-2 text-justify">
+  				Hello! My name is Comfort and I enjoy creating computer programs. My interest in computers started back in the late 2000s when I used to play video games on my father's desktop. That
+  				experience made me curious about how computers work. I used to wonder why does pressing a key on a keyboard lead to changes on the screen? It all seemed like magic.
   			</p>
 
-  			<p class="text-light-gray text-sm mb-2">
-  				Fast-forward to today, and I've had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio. My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.
+  			<p class="text-light-gray text-sm mb-2 text-justify">
+  				Fast-forward to today, I've learned a lot about microprocessors, assembly, data structures, algorithms, the web e.t.c. I've also had the privilege of working at
+  				<a class="text-light-blue" href="experience.html">
+  					a start-up
+  				</a>
+  				and
+  				<a class="text-light-blue" href="projects.html">
+  					some great projects
+  				</a>.
   			</p>
 
-  			<p class="text-light-gray text-sm mb-2">
+  			<p class="text-light-gray text-sm mb-2 max-md:text-justify">
   				Here are a few technologies I've been working with recently:
   			</p>
 
   			<div class="text-light-gray text-sm mb-2">
   				<ul>
-  					<li>JavaScript (ES6+)</li>
-  					<li>React</li>
+  					<li 
+  						arrow="⮞" 
+  						class="before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+  					>
+  						JavaScript
+  					</li>
+  					<li
+  						arrow="⮞" 
+  						class="before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+  					>
+  						React
+  					</li>
+  					<li
+  						arrow="⮞" 
+  						class="before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+  					>
+  						Tailwind
+  					</li>
+  					<li
+							arrow="⮞" 
+  						class="before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+  					>
+  						Laravel
+  					</li>
+  					<li
+							arrow="⮞" 
+  						class="before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+  					>
+  						PHP
+  					</li>
   				</ul>
   			</div>
   		</div>
   		<div class="md:w-1/2 relative flex justify-center">
-  			<img class="w-full sm:w-96 h-auto" src="../images/ProfilePic.jpg">
+  			<img class="w-full sm:w-96 h-auto rounded" src="../images/ProfilePic.jpg">
   		</div>
   	</section>
   </main>
