Added direct download link generators for my CV

--- a/src/contact.html
+++ b/src/contact.html
@@ -46,7 +46,7 @@
 	 			</li>
 	 			<li>
 	 				<a 
-	 					href="#"
+	 					href="https://drive.google.com/uc?export=download&id=125FNEpKEMdYFhSkrEQ7tfNxz5fI7xyWm"
 	 					class="
 	 						border border-light-blue text-light-blue px-3 py-1 rounded
 	 					"
@@ -95,7 +95,7 @@
  			</li>
  			<li>
  				<a 
- 					href="#"
+ 					href="https://drive.google.com/uc?export=download&id=125FNEpKEMdYFhSkrEQ7tfNxz5fI7xyWm"
  					class="
  						border border-light-blue text-light-blue px-3 py-1 rounded
  					"
