Completed adding content to the projects page.

--- a/src/projects.html
+++ b/src/projects.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header class="
-  	px-4 py-6
+  	px-4 py-6 relative
   	bg-dark-blue shadow
  	">
 	 	<nav class="
@@ -61,8 +61,168 @@
 	 		</button>
 	 	</nav> 	
   </header> 
-  <main>
-  	About
+  <main class="bg-dark-blue min-h-screen">
+  	<section class="px-4 sm:px-16 md:px-28 lg:px-36">
+  		<h1 class="text-3xl mb-4 max-md:text-center font-semibold text-cream">
+			Projects
+		</h1>
+		<div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+			<div class="w-full rounded shadow-md shadow-black text-light-gray text-sm p-3">
+				<iframe 
+					class="rounded pointer-events-none overflow-hidden" 
+					src="https://comfortprince.github.io/frontend-mentor-11-multi-step-form/src/"
+					width="100%" height="160rem"
+					scrolling="no" 
+				></iframe>
+				<ul class="flex gap-2 text-lg">
+					<li>
+						<span class="text-[orange]">
+							HTML
+						</span>
+					</li>
+					<li>
+						<span class="text-[magenta]">
+							CSS
+						</span>
+					</li>
+					<li>
+						<span class="text-[darkgreen]">
+							JS
+						</span>
+					</li>
+					<li>
+						<span class="text-[#2196f3]">
+							Tailwind
+						</span>
+					</li>
+				</ul>
+				<h2 class="text-2xl text-cream mb-2">
+					Multi Step Form
+				</h2>
+				<div class="mb-2">
+					A website that allows users to learn the details about different countries
+				</div>
+
+				<div class="flex justify-between">
+					<a 
+						class="border border-[#24292e] text-[#24292e] rounded px-3 py-1" 
+						href="https://github.com/comfortprince/frontend-mentor-11-multi-step-form"
+					>
+						Github
+					</a>
+					<a 
+						class="border border-[red] text-[red] rounded px-3 py-1" 
+						href="https://comfortprince.github.io/frontend-mentor-11-multi-step-form/src"
+					>
+						Live Site
+					</a>
+				</div>
+			</div>
+			<div class="w-full rounded shadow-md shadow-black text-light-gray text-sm p-3">
+				<iframe 
+					class="rounded pointer-events-none overflow-hidden" 
+					src="https://comfortprince.github.io/frontend-mentor-12-rest-countries-api/src/countries.html"
+					width="100%" height="160rem"
+					scrolling="no" 
+				></iframe>
+				<ul class="flex gap-2 text-lg">
+					<li>
+						<span class="text-[orange]">
+							HTML
+						</span>
+					</li>
+					<li>
+						<span class="text-[magenta]">
+							CSS
+						</span>
+					</li>
+					<li>
+						<span class="text-[darkgreen]">
+							JS
+						</span>
+					</li>
+					<li>
+						<span class="text-[#2196f3]">
+							Tailwind
+						</span>
+					</li>
+				</ul>
+				<h2 class="text-2xl text-cream mb-2">
+					Country Profiles
+				</h2>
+				<div class="mb-2">
+					A website that allows users to learn the details about different countries
+				</div>
+
+				<div class="flex justify-between">
+					<a 
+						class="border border-[#24292e] text-[#24292e] rounded px-3 py-1" 
+						href="https://github.com/comfortprince/frontend-mentor-12-rest-countries-api"
+					>
+						Github
+					</a>
+					<a 
+						class="border border-[red] text-[red] rounded px-3 py-1" 
+						href="https://comfortprince.github.io/frontend-mentor-12-rest-countries-api/src/countries.html"
+					>
+						Live Site
+					</a>
+				</div>
+			</div>
+			<div class="w-full rounded shadow-md shadow-black text-light-gray text-sm p-3">
+				<iframe 
+					class="rounded pointer-events-none overflow-hidden" 
+					src="https://comfortprince.github.io/portifolio/src/about"
+					width="100%" height="160rem"
+					scrolling="no" 
+				></iframe>
+				<ul class="flex gap-2 text-lg">
+					<li>
+						<span class="text-[orange]">
+							HTML
+						</span>
+					</li>
+					<li>
+						<span class="text-[magenta]">
+							CSS
+						</span>
+					</li>
+					<li>
+						<span class="text-[darkgreen]">
+							JS
+						</span>
+					</li>
+					<li>
+						<span class="text-[#2196f3]">
+							Tailwind
+						</span>
+					</li>
+				</ul>
+				<h2 class="text-2xl text-cream mb-2">
+					Portfolio
+				</h2>
+				<div class="mb-2">
+					A website for showcasing my projects and skills to the world.
+				</div>
+
+				<div class="flex justify-between">
+					<a 
+						class="border border-[#24292e] text-[#24292e] rounded px-3 py-1" 
+						href="https://github.com/comfortprince/portifolio"
+					>
+						Github
+					</a>
+					<a 
+						class="border border-[red] text-[red] rounded px-3 py-1" 
+						href="https://comfortprince.github.io/portifolio/src/about"
+					>
+						Live Site
+					</a>
+				</div>
+			</div>
+		</div>
+  	</section>
+  			
   </main>
 
   <!-- Responsive Navigation -->
