Completed adding education and experience to the experience page.

--- a/src/experience.html
+++ b/src/experience.html
@@ -61,8 +61,122 @@
 	 		</button>
 	 	</nav> 	
   </header> 
-  <main>
-  	About
+  <main class="bg-dark-blue min-h-screen pb-4">
+		<section 
+			class="
+				px-4 sm:px-16 md:px-28 lg:px-36
+			"
+		>
+			<h2 class="text-light-blue text-3xl mb-4 max-md:text-center text-cream">
+				Experience
+			</h2>
+
+			<article class="rounded shadow-md shadow-black text-light-gray text-sm p-3">
+				<div class="text-xs text-light-blue">
+					May 2022 – Aug 2022
+				</div>
+				<h3 class="text-cream text-xl py-1">
+					Web Development and IT
+				</h3>
+				<div class="text-lg pb-1">
+					Menokws Pvt Ltd
+				</div>
+				<ul class="grid gap-1">
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						Utilized Bootstrap, PHP, MySQL and HTML/CSS/JavaScript to develop mobile-friendly and responsive marketing websites
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						Participated in POS implementation projects through hardware configuration, software installation and system testing.
+					</li>
+				</ul>
+			</article>
+
+			<article class="rounded shadow-md shadow-black text-light-gray text-sm p-3 mt-4">
+				<div class="text-xs text-light-blue">
+					Apr 2022 – May 2022
+				</div>
+				<h3 class="text-cream text-xl py-1">
+					Information Technology
+				</h3>
+				<div class="text-lg pb-1">
+					Chipinge Town Council
+				</div>
+				<ul class="grid gap-1">
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						 Provided customer support by assisting clients with inquiries about their water bills by addressing questions, clarifying details, and resolving concerns or issues
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						Prepared water bills through manual entry of consumption data from hardcopy forms into the Promun billing software.
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						Prepared water bills through manual entry of consumption data from hardcopy forms into the Promun billing software.
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						Managed various hardware including computers, printers and servers. Server administration duties centered around overseeing active directory, installing software updates and performing routine hardware maintenance.
+					</li>
+				</ul>
+			</article>
+		</section>
+		<section 
+			class=" 
+				px-4 sm:px-16 md:px-28 lg:px-36
+			"
+		>
+			<h2 class="text-light-blue text-3xl mb-4 max-md:text-center text-cream mt-4">
+				Education
+			</h2>
+			<article class="rounded shadow-md shadow-black text-light-gray text-sm p-3">
+				<div class="text-xs text-light-blue">
+					2018 – 2023
+				</div>
+				<h3 class="text-cream text-xl py-1">
+					Bachelors of Engineering Honors Degree in Electronic Engineering
+				</h3>
+				<div class="text-lg pb-1">
+					National University of Science and Technology
+				</div>
+			</article>
+			<article class="rounded shadow-md shadow-black text-light-gray text-sm p-3 mt-4">
+				<div class="text-xs text-light-blue">
+					2015 – 2017
+				</div>
+				<h3 class="text-cream text-xl py-1">
+					Advanced Level
+				</h3>
+				<div class="text-lg pb-1">
+					Mount Selinda High School
+				</div>
+			</article>
+			<article class="rounded shadow-md shadow-black text-light-gray text-sm p-3 mt-4">
+				<div class="text-xs text-light-blue">
+					2011 – 2014
+				</div>
+				<h3 class="text-cream text-xl py-1">
+					Ordinary Level
+				</h3>
+				<div class="text-lg pb-1">
+					Marange High School
+				</div>
+			</article>
+		</section>	
   </main>
 
   <!-- Responsive Navigation -->
