--- a/src/experience.html
+++ b/src/experience.html
@@ -176,7 +176,60 @@
 					Marange High School
 				</div>
 			</article>
-		</section>	
+		</section>
+		<section 
+			class="
+				px-4 sm:px-16 md:px-28 lg:px-36
+			"
+		>
+			<h2 class="text-light-blue text-3xl my-4 max-md:text-center text-cream">
+				Tools and Technologies
+			</h2>
+
+			<article class="rounded shadow-md shadow-black text-light-gray text-sm p-3">
+				<h4 class="text-cream text-lg py-1">
+					Languages and Technologies
+				</h4>
+				<ul class="grid grid-cols-2 gap-1">
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						HTML CSS JavaScript
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						React
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						Tailwind
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						PHP
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						Laravel
+					</li>
+					<li
+						arrow="⮞" 
+  					class="inline-flex items-center gap-1 before:content-[attr(arrow)] before:text-light-blue before:text-xs before:mr-1"
+					>
+						SQL MySQL
+					</li>
+				</ul>
+			</article>
+		</section>
   </main>
 
   <!-- Responsive Navigation -->
