--- a/src/contact.html
+++ b/src/contact.html
@@ -61,8 +61,21 @@
 	 		</button>
 	 	</nav> 	
   </header> 
-  <main>
-  	About
+  <main class="bg-dark-blue min-h-screen pb-4">
+  	<section 
+			class="
+				px-4 sm:px-16 md:px-28 lg:px-36
+			"
+		>
+			<h2 class="text-light-blue text-3xl mb-4 max-md:text-center text-cream">
+				Send me an email
+			</h2>
+			<div class="text-center">
+				<a id="mailto-link" class="text-light-blue" href="#">
+					Click Me
+				</a>
+			</div>
+		</section>
   </main>
 
   <!-- Responsive Navigation -->
@@ -120,6 +133,12 @@
 	closeBtn.addEventListener('click', () => {
 		if(responsiveNavWrapper.getAttribute('data-status') === 'active')
 			responsiveNavWrapper.setAttribute('data-status', '')
+	})
+
+	document.querySelector('#mailto-link').addEventListener('click', () => {
+		let mail = document.createElement('a')
+		mail.href = "mailto:comfort.prince.hluyo@gmail.com"
+		mail.click()
 	})
 </script>
 </html>
